2009-11-08  Juraj Skripsky  <js@hotfeet.ch>

	* Array.cs (Sort): optimize qsort by employing multiple, faster copies
	of the inner-most loops:
	- for case "comparer != null"
	- for case "pivot is IComparable<T>"
	- for case "pivot is IComparable"
	Remove compare methods as the inner loops now do their work.
	Use GetValueImpl instead of GetValue in swap.

	Part 1 of 3 fixing bug #351638.

2009-11-03  Miguel de Icaza  <miguel@novell.com>

	* TermInfoDriver.cs (CheckWindowDimensions) Avoid extra checks, as
	the condition was always checked previously.

	(WriteSpecialKey): Actually write the tab character.
	
2009-11-02  Miguel de Icaza  <miguel@novell.com>

	* More NET_2_0 define removal, assume that it is now always true. 

2009-10-30  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoType.cs: Don't pass null value to icalls 
	GetCorrespondingInflated[Constructor|Method]

2009-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MarshalByRefObject.cs: In InitializeLifetimeService, if a lease
	exists for the object return it, instead of always creating
	a new one. Fixes bug #544357.

2009-10-27  Sebastien Pouliot  <sebastien@ximian.com>

	* String.cs: Remove unused (and unneeded) internal call defs.
	Reduce duplication (and fix test) for Concat (object,object).
	Avoid allocating zero-length strings in the cases where the
	FX does not do so.

2009-10-22  Miguel de Icaza  <miguel@novell.com>

	*  String.cs (IsNullOrWhiteSpace, Concat, Join): New 4.0 methods. 

	* IntPtr.cs (Add, Subtract): New 4.0 methods.

	* Tuple.cs: Updated signature.

2009-10-19  Marek Safar  <marek.safar@gmail.com>

	* IObservable.cs, IObserver.cs: New files.
	
	* EventHandler.cs: Cleanup.

2009-10-16  Miguel de Icaza  <miguel@novell.com>

	* Jumbo patch to drop support for pre-NET_2_0 code:

	Remove ONLY_1_1 code
	Remove NET_1_0 only code
	Remove NET_2_0 defines assuming the value is true.

	Improve one MonoTODO;   Implement one MonoTODO/Niex.
